// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders with data 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Radio
    checked={false}
    className="foo"
    color="white"
    disabled={false}
    label="foo"
    onClick={[Function]}
    variant="primary"
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": Array [
        null,
        <label
          className="pointer"
>
          foo
</label>,
      ],
      "childrenWrapperClassName": "",
      "className": "relative flex bold foo",
      "color": "white-denim",
      "disabled": false,
      "fullWidth": false,
      "hover": "shadow",
      "label": "",
      "onClick": [Function],
      "onMouseLeave": [Function],
      "onMouseOver": [Function],
      "openInCurrentTab": false,
      "shadow": false,
      "to": "",
      "type": "button",
      "variant": "style-none",
    },
    "ref": null,
    "rendered": Array [
      null,
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "foo",
          "className": "pointer",
        },
        "ref": null,
        "rendered": "foo",
        "type": "label",
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          null,
          <label
            className="pointer"
>
            foo
</label>,
        ],
        "childrenWrapperClassName": "",
        "className": "relative flex bold foo",
        "color": "white-denim",
        "disabled": false,
        "fullWidth": false,
        "hover": "shadow",
        "label": "",
        "onClick": [Function],
        "onMouseLeave": [Function],
        "onMouseOver": [Function],
        "openInCurrentTab": false,
        "shadow": false,
        "to": "",
        "type": "button",
        "variant": "style-none",
      },
      "ref": null,
      "rendered": Array [
        null,
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "foo",
            "className": "pointer",
          },
          "ref": null,
          "rendered": "foo",
          "type": "label",
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`renders without data 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Radio
    checked={false}
    className=""
    disabled={false}
    label=""
    variant="primary"
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": Array [
        null,
        <label
          className="pointer"
/>,
      ],
      "childrenWrapperClassName": "",
      "className": "relative flex bold",
      "color": "white-denim",
      "disabled": false,
      "fullWidth": false,
      "hover": "shadow",
      "label": "",
      "onClick": [Function],
      "onMouseLeave": [Function],
      "onMouseOver": [Function],
      "openInCurrentTab": false,
      "shadow": false,
      "to": "",
      "type": "button",
      "variant": "style-none",
    },
    "ref": null,
    "rendered": Array [
      null,
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "",
          "className": "pointer",
        },
        "ref": null,
        "rendered": "",
        "type": "label",
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          null,
          <label
            className="pointer"
/>,
        ],
        "childrenWrapperClassName": "",
        "className": "relative flex bold",
        "color": "white-denim",
        "disabled": false,
        "fullWidth": false,
        "hover": "shadow",
        "label": "",
        "onClick": [Function],
        "onMouseLeave": [Function],
        "onMouseOver": [Function],
        "openInCurrentTab": false,
        "shadow": false,
        "to": "",
        "type": "button",
        "variant": "style-none",
      },
      "ref": null,
      "rendered": Array [
        null,
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "",
            "className": "pointer",
          },
          "ref": null,
          "rendered": "",
          "type": "label",
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
